--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "highspot-elderscroll": {
+    "elderscroll-api": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/highspot-elderscroll",
+            "outputPath": "dist/elderscroll-api",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -72,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "highspot-elderscroll:build"
+            "browserTarget": "elderscroll-api:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "highspot-elderscroll:build:production"
+              "browserTarget": "elderscroll-api:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "highspot-elderscroll:build"
+            "browserTarget": "elderscroll-api:build"
           }
         },
         "test": {
@@ -120,16 +120,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "highspot-elderscroll:serve"
+            "devServerTarget": "elderscroll-api:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "highspot-elderscroll:serve:production"
+              "devServerTarget": "elderscroll-api:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "highspot-elderscroll"
+  "defaultProject": "elderscroll-api"
 }
