--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ngrx/effects": "^11.0.0",
     "@ngrx/store": "^11.0.0",
     "bootstrap": "^4.6.0",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-skeleton-loader": "^2.7.0",
     "rxjs": "~6.6.0",
